Fixes SASS spacing issues
 - SASS/CSS does not like '.' so replaced the variables with decimal
    values with integer values. This had a cascading effect but think
    it works out well. Now each integer maps to 2px; thus, devs
    can calculate the corresponding 'rem' value by dividing the integer
    by 8, or the 'px' value by muliplying it by 2.

 - Moves the spacing values to their own SCSS variables so they can
    be used in SCSS files, for dev consistency.

 - Updates components that were using padding util classes.

--- a/src/styles/4-elements/input.scss
+++ b/src/styles/4-elements/input.scss
@@ -1,6 +1,8 @@
+@use 'sass:map';
+
 input {
     font-size: 0.6em;
-    padding: 2px 4px;
+    padding: $spacing-1 $spacing-2;
     border-radius: 2px;
     border-width: 1px;
     border-color: #fff;
@@ -10,7 +12,7 @@ input {
 // TODO move to form.scss
 button {
     font-size: 0.6em;
-    padding: $spacing-xs $spacing-sm;
+    padding: $spacing-2 $spacing-3;
     border-radius: 2px;
     border: 1px solid $color-transparent;
     color: $color-font-light;
